# url2code

./: .dockerignore  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: claude.yml  release.yml  test.yml
app/: config.py  executor.py  logging_config.py  main.py  models.py  parser.py  request_parser.py
config/: tools.yaml
src/url2code/: __init__.py  config.py  executor.py  logging_config.py  main.py  request_parser.py
tests/: test_executor.py  test_parser.py  test_request_parser.py
