[project]
name = "url2code"
version = "1.0.4"
description = "YAML-driven FastAPI wrapper for CLI tools"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pyyaml>=6",
  "python-multipart>=0.0.20",
]

[project.scripts]
url2code = "url2code.main:run"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=5",
  "ruff>=0.8",
  "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/url2code"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/url2code"]
omit = [
  # Entry point exercised via TestClient; coverage gets confused by
  # the FastAPI lifespan + uvicorn.run wrapper.
  "src/url2code/main.py",
]

[tool.coverage.report]
# 85% gate. Real coverage is ~90% as of v1.0.4; the 5-point
# buffer absorbs short-term drift when new code lands ahead of
# its tests. Push this number up over time as the test suite
# stays ahead of feature work.
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
